fix: use general, not adjacent sibling selector. Fixes a couple of issues with checkboxes with extra content: 1) Checked styling wasn't visible. This is because there are multiple labels that have the checkbox displayed via the psuedo elements, and they all sit on top of one another, but only the first label was showing the tick when checked. You couldn't see the tick though, because of the other checkboxes on top of it. 2) When disabled, only the first label for the checkbox would have the disabled styling applied. Also, the checkbox would not have the disabled styling for the same reasons as issue 1.

--- a/src/scss/shared/_control-inputs.scss
+++ b/src/scss/shared/_control-inputs.scss
@@ -6,7 +6,7 @@
 	width: $_o-forms-spacing-six;
 	height: $_o-forms-spacing-six;
 
-	&:checked + .o-forms-input__label:after {
+	&:checked ~ .o-forms-input__label:after {
 		opacity: 1;
 	}
 
@@ -14,7 +14,7 @@
 		&:disabled {
 			opacity: 0;
 
-			+ .o-forms-input__label {
+			~ .o-forms-input__label {
 				opacity: 0.4;
 			}
 		}
